@@ -1,3 +1,12 @@
+2008-04-24  Thomas Wood  <thos@gnome.org>
+
+	* gnome-keyboard-properties-xkbot.c: (xkb_options_load_options),
+	(xkb_options_popup_dialog):
+	* gnome-keyboard-properties.glade:
+
+	Don't close the Keyboard Layout Options window when the Help button is
+	clicked. (bug #529772).
+
 2008-04-14  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkb.c: getting rid of unneeded backup
